<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>eu.europeana.clio</groupId>
  <artifactId>clio</artifactId>
  <version>11-SNAPSHOT</version>
  <packaging>pom</packaging>

  <modules>
    <module>clio-common</module>
    <module>clio-reporting</module>
    <module>clio-link-checking</module>
  </modules>

  <scm>
    <url>https://github.com/europeana/clio</url>
    <connection>scm:git:https://github.com/europeana/clio</connection>
    <developerConnection>scm:git:https://github.com/europeana/clio</developerConnection>
    <tag>HEAD</tag>
  </scm>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.release>21</maven.compiler.release>

    <!--Plugins-->
    <version.maven.compiler.plugin>3.14.0</version.maven.compiler.plugin>
    <version.surefire.plugin>3.5.3</version.surefire.plugin>
    <version.failsafe.plugin>3.5.3</version.failsafe.plugin>
    <version.maven.release.plugin>2.5.3</version.maven.release.plugin>

    <!--Internal-->
    <version.metis-common>17-SNAPSHOT</version.metis-common>
    <version.metis>13-SNAPSHOT</version.metis>
    <version.metis-core>16-SNAPSHOT</version.metis-core>

    <!--External-->
    <version.hibernate.core>6.4.4.Final</version.hibernate.core>
    <version.postgresql>42.7.7</version.postgresql>
    <version.spring.boot>3.2.3</version.spring.boot>
    <version.spring>6.1.4</version.spring>
    <version.springdoc-openapi-starter-webmvc-ui>2.3.0</version.springdoc-openapi-starter-webmvc-ui>
    <version.elastic.apm>1.48.1</version.elastic.apm>
    <version.slf4j>2.0.12</version.slf4j>
    <version.log4j>2.23.0</version.log4j>
    <version.junit>5.10.2</version.junit>
    <version.jackson>2.16.1</version.jackson>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <scope>provided</scope>
    </dependency>
  </dependencies>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>${version.spring.boot}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-api</artifactId>
        <version>${version.junit}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-engine</artifactId>
        <scope>test</scope>
        <version>${version.junit}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <repositories>
    <!--Release repositories-->
    <repository>
      <id>libs-release</id>
      <name>libs-release</name>
      <url>https://artifactory-prod.eanadev.org/artifactory/libs-release</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
    <!--Snapshot repositories-->
    <repository>
      <id>libs-snapshot</id>
      <name>libs-snapshot</name>
      <url>https://artifactory-prod.eanadev.org/artifactory/libs-snapshot</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
  </repositories>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${version.maven.compiler.plugin}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${version.surefire.plugin}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-failsafe-plugin</artifactId>
          <version>${version.failsafe.plugin}</version>
          <configuration>
            <failIfNoTests>false</failIfNoTests>
            <classesDirectory>${project.build.outputDirectory}</classesDirectory>
          </configuration>
          <executions>
            <execution>
              <goals>
                <goal>integration-test</goal>
                <goal>verify</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-release-plugin</artifactId>
          <version>${version.maven.release.plugin}</version>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
      </plugin>
    </plugins>
  </build>
</project>
